--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -140,6 +140,7 @@ deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
+deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::53c8;
 deny 2604:2dc0:202:300::ed3;
