--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -16,6 +16,9 @@ set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
+set_real_ip_from 104.167.242.116;
+set_real_ip_from 104.167.242.117;
+set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -940,7 +943,6 @@ set_real_ip_from 209.141.40.68;
 set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
@@ -1035,6 +1037,7 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
+set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::53c8;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -1669,6 +1672,7 @@ set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
+set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1679,7 +1683,6 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1785,6 +1788,7 @@ set_real_ip_from 45.95.169.24;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.23.109.25;
+set_real_ip_from 46.232.104.56;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.30.188.218;
@@ -1797,7 +1801,6 @@ set_real_ip_from 51.195.107.220;
 set_real_ip_from 51.195.166.174;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
-set_real_ip_from 51.68.189.231;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
@@ -1834,7 +1837,6 @@ set_real_ip_from 54.36.101.21;
 set_real_ip_from 54.36.108.162;
 set_real_ip_from 54.36.209.253;
 set_real_ip_from 54.36.209.254;
-set_real_ip_from 54.38.33.53;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
