--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -10,6 +10,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.146.203.11;
 allow 103.163.218.11;
+allow 103.164.54.199;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -182,10 +183,8 @@ allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
-allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
-allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -223,6 +222,9 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.143.138;
 allow 176.65.148.3;
+allow 176.65.149.100;
+allow 176.65.149.87;
+allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 178.162.175.5;
@@ -946,6 +948,7 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
+allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -1016,6 +1019,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
@@ -1313,7 +1317,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1327,7 +1330,10 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1675,7 +1681,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1686,6 +1691,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1809,7 +1815,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1946,7 +1951,6 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.88.74.193;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.228.205;
