--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -142,6 +142,7 @@ allow 139.99.8.57;
 allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.171.12.88;
+allow 142.202.240.72;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 144.172.118.4;
@@ -223,10 +224,12 @@ allow 176.58.121.177;
 allow 176.65.143.138;
 allow 176.65.148.3;
 allow 176.65.149.100;
+allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.149.134.139;
 allow 178.162.175.5;
 allow 178.162.197.91;
 allow 178.17.170.144;
@@ -948,7 +951,6 @@ allow 209.141.40.68;
 allow 209.141.45.141;
 allow 209.141.45.81;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.54.203;
 allow 209.141.54.218;
 allow 209.141.55.26;
@@ -1250,6 +1252,7 @@ allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f8:c013:52df::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1334,6 +1337,7 @@ allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1878,6 +1882,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
+allow 78.47.174.176;
 allow 79.100.235.29;
 allow 79.127.129.160;
 allow 80.241.60.207;
