--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -142,6 +142,7 @@ set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.164.38.67;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
+set_real_ip_from 142.202.240.72;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 144.172.118.4;
@@ -223,10 +224,12 @@ set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.65.148.3;
 set_real_ip_from 176.65.149.100;
+set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.134.139;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -948,7 +951,6 @@ set_real_ip_from 209.141.40.68;
 set_real_ip_from 209.141.45.141;
 set_real_ip_from 209.141.45.81;
 set_real_ip_from 209.141.46.203;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.54.218;
 set_real_ip_from 209.141.55.26;
@@ -1250,6 +1252,7 @@ set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
+set_real_ip_from 2a01:4f8:c013:52df::1;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
@@ -1334,6 +1337,7 @@ set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
+set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
@@ -1878,6 +1882,7 @@ set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 78.159.131.96;
+set_real_ip_from 78.47.174.176;
 set_real_ip_from 79.100.235.29;
 set_real_ip_from 79.127.129.160;
 set_real_ip_from 80.241.60.207;
